lilv (0.22.1) unstable;

  * Add lilv_state_set_metadata() for adding state banks/comments/etc
    (based on patch from Hanspeter Portner)
  * Fix crash when state contains non-POD properties
  * Fix state file versioning
  * Unload contained resources when bundle is unloaded
  * Do not instantiate plugin when data fails to parse
  * Support re-loading plugins
  * Replace bundles if bundle with newer plugin version is loaded
    (based on patch from Robin Gareus)
  * Fix loading dyn-manifest from bundles with spaces in their path
  * Check lv2:binary predicate for UIs
  * Add LILV_URI_ATOM_PORT and LILV_URI_CV_PORT defines
  * Fix Python bindings
  * Fix documentation installation
  * Fix outdated comment references to lilv_uri_to_path()

 -- David Robillard <d@drobilla.net>  Sun, 24 Jul 2016 19:16:57 -0400

lilv (0.22.0) stable;

  * Fix loading files with spaces in their path
  * Add lilv_file_uri_parse() for correct URI to path conversion
  * Add lilv_node_get_path() for convenient file URI path access
  * Add lilv_state_emit_port_values() for special port value handling
  * Add lilv_state_get_uri()
  * Add lilv_state_delete() for deleting user saved presets
  * Add lilv_free() for systems picky about such things
  * Fix lilv_world_ask() to work with wildcards
  * Fix creation of duplicate manifest entries when saving state
  * Fix bindings for Python 3
  * Load discovered owl ontologies as specifications
  * Expose lilv_world_load_specifications() and
    lilv_world_load_plugin_classes()
  * Tolerate passing NULL to lilv_state_restore()
  * Preserve absolute paths in state if no link directory is given
  * Fix a few minor/unlikely memory errors
  * Configure based on compiler target OS for cross-compilation
  * Fix lilv_realpath() on pre-POSIX-2008 systems
  * Fix directory walking on some systems (thanks Matt Fischer)
  * Windows fixes (thanks John Emmas)
  * Minor documentation improvements
  * Upgrade to waf 1.8.14
