@@ -1,5 +1,6 @@
 lilv (0.22.1) unstable;
 
+  * Add lv2apply utility for applying plugins to audio files
   * Add lilv_state_set_metadata() for adding state banks/comments/etc
     (based on patch from Hanspeter Portner)
   * Fix crash when state contains non-POD properties
@@ -16,7 +17,7 @@ lilv (0.22.1) unstable;
   * Fix documentation installation
   * Fix outdated comment references to lilv_uri_to_path()
 
- -- David Robillard <d@drobilla.net>  Sun, 24 Jul 2016 19:16:57 -0400
+ -- David Robillard <d@drobilla.net>  Sat, 27 Aug 2016 09:14:39 -0400
 
 lilv (0.22.0) stable;
 
